implement the inventoryPage inventory class implement INotifyPropertyChanged

--- a/WpfApp1/MainWindow.xaml
+++ b/WpfApp1/MainWindow.xaml
@@ -43,7 +43,9 @@
                Header="Sales" />
 
       <TabItem FontSize="20"
-               Header="Inventory" />
+               Header="Inventory">
+        <page:InventoryPage x:Name="inventoryPage" />
+      </TabItem>
 
 
     </TabControl>
