--- a/WpfApp1/App.xaml
+++ b/WpfApp1/App.xaml
@@ -2,8 +2,9 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:WpfApp1"
+             xmlns:converter="clr-namespace:WpfApp1.Converters"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
-         
-    </Application.Resources>
+      <converter:MultiplierConverter x:Key="Multiplier" />
+  </Application.Resources>
 </Application>
