--- a/WpfApp1/Windows/AddCategoryWindow.xaml
+++ b/WpfApp1/Windows/AddCategoryWindow.xaml
@@ -7,6 +7,7 @@
         mc:Ignorable="d"
         Title="AddCategoryWindow" 
         ContentRendered="Window_ContentRendered"
+        WindowStartupLocation="CenterScreen"
         Height="300"
         Width="400"
         MinHeight="300" 
