--- a/WpfApp1/Windows/AddItemWindow.xaml
+++ b/WpfApp1/Windows/AddItemWindow.xaml
@@ -6,6 +6,7 @@
         xmlns:local="clr-namespace:WpfApp1.Windows"
         mc:Ignorable="d"
         Title="AddItemWindow"
+        WindowStartupLocation="CenterScreen"
         Height="400"
         Width="800"
         MinHeight="400"
