--- a/WpfApp1/Pages/EditPage.xaml
+++ b/WpfApp1/Pages/EditPage.xaml
@@ -13,14 +13,6 @@
              Loaded="EditPage_Loaded">
   <UserControl.Resources>
     <converter:MultiplierConverter x:Key="Multiplier" />
-    <Style TargetType="Button"
-           x:Key="buttonStyle">
-      <Setter Property="Margin"
-              Value="10,10,10,10" />
-      <Setter Property="Padding"
-              Value="5" />
-    </Style>
-           
   </UserControl.Resources>
   <Grid x:Name="stackpanel">
     <Grid.RowDefinitions>
@@ -34,12 +26,20 @@
         <ColumnDefinition Width="5*"/>
         <ColumnDefinition Width="1*"/>
       </Grid.ColumnDefinitions>
-      <ListView x:Name="itemsListView"
-                Grid.Column="0"
-                GotFocus="ItemsListView_GotFocus">
+      <StackPanel Grid.Column="0"
+                  GotFocus="LeftGrid_GotFocus">
+        <TextBlock Text="Item"
+                   FontSize="25"
+                   Padding="5"
+                   TextAlignment="Center"
+                   Background="Aquamarine" />
+        <ListView x:Name="itemsListView"
+                  BorderBrush="Aquamarine"
+                  BorderThickness="5"
+                  GotFocus="itemsListView_GotFocus">
         <ListView.View>
           <GridView>
-            <GridViewColumn Width="{Binding ElementName=itemsListView, Path=ActualWidth, Converter={StaticResource Multiplier}, ConverterParameter=0.2}"
+            <GridViewColumn Width="{Binding ElementName=itemsListView, Path=ActualWidth, Converter={StaticResource Multiplier}, ConverterParameter=0.22}"
                             DisplayMemberBinding="{Binding Name}">
               <GridViewColumn.Header>
                 <GridViewColumnHeader x:Name="nameHeader"
@@ -48,7 +48,7 @@
                 </GridViewColumnHeader>
               </GridViewColumn.Header>
             </GridViewColumn>
-            <GridViewColumn Width="{Binding ElementName=itemsListView, Path=ActualWidth, Converter={StaticResource Multiplier}, ConverterParameter=0.2}"
+            <GridViewColumn Width="{Binding ElementName=itemsListView, Path=ActualWidth, Converter={StaticResource Multiplier}, ConverterParameter=0.22}"
                             DisplayMemberBinding="{Binding Category}">
               <GridViewColumn.Header>
                 <GridViewColumnHeader x:Name="categoryHeader"
@@ -57,7 +57,7 @@
                 </GridViewColumnHeader>
               </GridViewColumn.Header>
             </GridViewColumn>
-            <GridViewColumn Width="{Binding ElementName=itemsListView, Path=ActualWidth, Converter={StaticResource Multiplier}, ConverterParameter=0.2}"
+            <GridViewColumn Width="{Binding ElementName=itemsListView, Path=ActualWidth, Converter={StaticResource Multiplier}, ConverterParameter=0.22}"
                             DisplayMemberBinding="{Binding Price}">
               <GridViewColumn.Header>
                 <GridViewColumnHeader x:Name="priceHeader"
@@ -66,7 +66,7 @@
                 </GridViewColumnHeader>
               </GridViewColumn.Header>
             </GridViewColumn>
-            <GridViewColumn Width="{Binding ElementName=itemsListView, Path=ActualWidth, Converter={StaticResource Multiplier}, ConverterParameter=0.2}"
+            <GridViewColumn Width="{Binding ElementName=itemsListView, Path=ActualWidth, Converter={StaticResource Multiplier}, ConverterParameter=0.22}"
                             DisplayMemberBinding="{Binding AddTime}">
               <GridViewColumn.Header>
                 <GridViewColumnHeader x:Name="addTimeHeader"
@@ -80,13 +80,21 @@
           </GridView>
         </ListView.View>
       </ListView>
-      
+      </StackPanel>
+
       <StackPanel Grid.Column="1"
-                  Margin="5,0,5,0">
-        <GridViewColumnHeader Content="Category"/>
+                  Margin="5,0,5,0"
+                  GotFocus="RightGrid_GotFocus">
+        <TextBlock Text="Category"
+                 FontSize="25"
+                 Padding="5"
+                 TextAlignment="Center"
+                 Background="AntiqueWhite"/>
         <ListBox x:Name="categoriesListBox"
                  SelectionMode="Extended"
-                 GotFocus="CategoriesListBox_GotFocus" />
+                 BorderBrush="AntiqueWhite"
+                 BorderThickness="5"
+                 GotFocus="CategoriesListBox_GotFocus"/>
       </StackPanel>
       
     </Grid>
@@ -97,29 +105,41 @@
         <ColumnDefinition Width="1*"/>
         <ColumnDefinition Width="1*" />
         <ColumnDefinition Width="1*" />
+        <ColumnDefinition Width="1*" />
+        <ColumnDefinition Width="1*" />
       </Grid.ColumnDefinitions>
 
       <Button x:Name="addItemButton"
-              Grid.Column="0"
-              Style="{StaticResource buttonStyle}"
+              Background="Aquamarine"
+              Grid.Column="0"           
               Click="AddItemButton_Click"
               Content="Add Item"/>
 
-      <Button x:Name="deleteItemButton"
+      <Button x:Name="modifyItemButton"
+              Background="Aquamarine"
               Grid.Column="1"
-              Style="{StaticResource buttonStyle}"
+              Content="Remove Item" />
+
+      <Button x:Name="deleteItemButton"
+              Background="Aquamarine"
+              Grid.Column="2"             
               Click="DeleteItemButton_Click"
               Content="Remove Item" />
 
       <Button x:Name="addCategoryButton"
-              Style="{StaticResource buttonStyle}"
-              Grid.Column="2"
+              Background="AntiqueWhite"
+              Grid.Column="3"
               Click="AddCategoryButton_Click"
               Content="Add Category" />
 
+      <Button x:Name="modifyCategoryButton"
+              Background="AntiqueWhite"
+              Grid.Column="4"
+              Content="Modify Category" />
+
       <Button x:Name="deleteCategoryButton"
-              Style="{StaticResource buttonStyle}"
-              Grid.Column="3"
+              Background="AntiqueWhite"
+              Grid.Column="5"
               Click="DeleteCategoryButton_Click"
               Content="Remove Category" />
 
