--- a/WpfApp1/Pages/InventoryPage.xaml
+++ b/WpfApp1/Pages/InventoryPage.xaml
@@ -21,7 +21,8 @@
         <RowDefinition Height="1*" />
       </Grid.RowDefinitions>
       <ListView x:Name="itemsListView"
-                Grid.Row="0">
+                Grid.Row="0"
+                SelectionMode="Single">
         <ListView.View>
           <GridView>
             <GridViewColumn Header="Name"
@@ -33,6 +34,8 @@
           </GridView>
         </ListView.View>
       </ListView>
+      <Button Grid.Row="1"
+              Content="Edit Item consumption"/>
     </Grid>
     
     <Grid Grid.Column="1"
