--- a/WpfApp1/Models/Circle.xaml
+++ b/WpfApp1/Models/Circle.xaml
@@ -6,13 +6,13 @@
              xmlns:local="clr-namespace:WpfApp1.Models"
              mc:Ignorable="d" 
              d:DesignHeight="300" d:DesignWidth="300">
-    <Grid>
+  <Grid>
         <Ellipse 
             x:Name="circleUI" 
             Height="50" 
             Width="50"
-            Fill="Blue"
-            />
-        
-    </Grid>
+            Fill="Blue" />
+   
+
+  </Grid>
 </UserControl>
