--- a/WpfApp1/Windows/AddInventoryConsumptionWindow.xaml
+++ b/WpfApp1/Windows/AddInventoryConsumptionWindow.xaml
@@ -11,12 +11,36 @@
         MinWidth="400">
   <Grid>
     <Grid.RowDefinitions>
-      <RowDefinition Height="*"/>
-      <RowDefinition Height="2*"/>
-      <RowDefinition Height="*"/>
+      <RowDefinition Height="5*"/>
       <RowDefinition Height="*" />
     </Grid.RowDefinitions>
-    <Grid Grid.Row="3">
+    <Border Grid.Row="0"
+            BorderThickness="5"
+            BorderBrush="CadetBlue">
+      <Grid>
+        <Grid.RowDefinitions>
+          <RowDefinition Height="*" />
+          <RowDefinition Height="3*" />
+          <RowDefinition Height="*" />
+        </Grid.RowDefinitions>
+        <TextBlock x:Name="itemNameTextBlock"
+                   FontSize="25"/>
+        <StackPanel />
+        <Grid Grid.Row="2">
+          <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="*"/>
+            <ColumnDefinition Width="*"/>
+          </Grid.ColumnDefinitions>
+          <Button Grid.Column="0" 
+                  Content="+"
+                  FontSize="30"/>
+          <Button Grid.Column="1"
+                  Content="-"
+                  FontSize="30"/>
+        </Grid>
+      </Grid>
+    </Border>
+    <Grid Grid.Row="1">
       <Grid.ColumnDefinitions>
         <ColumnDefinition Width="*" />
         <ColumnDefinition Width="*" />
