--- a/WpfApp1/Dialogs/AddItemWindow.xaml
+++ b/WpfApp1/Dialogs/AddItemWindow.xaml
@@ -1,9 +1,9 @@
-﻿<Window x:Class="WpfApp1.Windows.AddItemWindow"
+﻿<Window x:Class="WpfApp1.Dialogs.AddItemWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:WpfApp1.Windows"
+        xmlns:local="clr-namespace:WpfApp1.Dialogs"
         mc:Ignorable="d"
         Title="AddItemWindow"
         WindowStartupLocation="CenterScreen"
@@ -50,22 +50,7 @@
                    Foreground="Red" />
       </Grid>
 
-      <Grid Margin="5,10,5,10">
-        <Grid.ColumnDefinitions>
-          <ColumnDefinition Width="*" />
-          <ColumnDefinition Width="2*" />
-          <ColumnDefinition Width="2*" />
-        </Grid.ColumnDefinitions>
-        <TextBlock Text="Price" />
-        <TextBox x:Name="priceTextBox"
-                 Grid.Column="1"
-                 TextChanged="PriceTextBox_TextChanged"/>
-        <TextBlock x:Name="priceWarningTextBlock"
-                   Grid.Column="2"
-                   Margin="5,0,0,0"
-                   Text="Price need be Numeric"
-                   Foreground="Red"/>
-      </Grid>
+      
 
       <Grid Margin="5,10,5,10">
         <Grid.ColumnDefinitions>
@@ -82,6 +67,23 @@
                    Margin="5,0,0,0"
                    Text="Category Cannot be blank" 
                    Foreground="Red"/>
+      </Grid>
+
+      <Grid Margin="5,10,5,10">
+        <Grid.ColumnDefinitions>
+          <ColumnDefinition Width="*" />
+          <ColumnDefinition Width="2*" />
+          <ColumnDefinition Width="2*" />
+        </Grid.ColumnDefinitions>
+        <TextBlock Text="Price" />
+        <TextBox x:Name="priceTextBox"
+                 Grid.Column="1"
+                 TextChanged="PriceTextBox_TextChanged" />
+        <TextBlock x:Name="priceWarningTextBlock"
+                   Grid.Column="2"
+                   Margin="5,0,0,0"
+                   Text="Price need be Numeric"
+                   Foreground="Red" />
       </Grid>
 
     </StackPanel>
