--- a/WpfApp1/Pages/InventoryPage.xaml
+++ b/WpfApp1/Pages/InventoryPage.xaml
@@ -20,9 +20,17 @@
         <RowDefinition Height="5*" />
         <RowDefinition Height="1*" />
       </Grid.RowDefinitions>
-      <ListView x:Name="itemsListView"
-                Grid.Row="0"
-                SelectionMode="Single">
+      <StackPanel Grid.Row="0">
+        <TextBlock Text="Item"
+                   Padding="5"
+                   FontSize="25"
+                   TextAlignment="Center"
+                   Background="Aquamarine"/>
+        <ListView x:Name="itemsListView"
+                  BorderBrush="Aquamarine"
+                  BorderThickness="5"
+                  SelectionMode="Single"
+                  SelectionChanged="ItemsListView_SelectionChanged">
         <ListView.View>
           <GridView>
             <GridViewColumn Header="Name"
@@ -34,22 +42,31 @@
           </GridView>
         </ListView.View>
       </ListView>
+      </StackPanel>
       <Button x:Name="editItemConsumptionButton"
               Grid.Row="1"
               Content="Edit Item consumption"
-              Click="EditItemConsumptionButton_Click"/>
+              Click="EditItemConsumptionButton_Click"
+              Background="Aquamarine"/>
     </Grid>
     
     <Grid Grid.Column="1"
-          LostFocus="RightGrid_LostFocus">
+          GotFocus="RightGrid_GotFocus">
       <Grid.RowDefinitions>
         <RowDefinition Height="5*" />
         <RowDefinition Height="1*" />
       </Grid.RowDefinitions>
-      <ListView x:Name="inventoryListView"
-                Grid.Row="0"
-                SelectionMode="Single"
-                SelectionChanged="InventoryListView_SelectionChanged">
+      <StackPanel Grid.Row="0">
+        <TextBlock FontSize="25" 
+                   TextAlignment="Center"
+                   Text="Invenotry"
+                   Padding="5"
+                   Background="AntiqueWhite"/>
+        <ListView x:Name="inventoryListView"
+                  SelectionMode="Single"
+                  BorderBrush="AntiqueWhite"
+                  BorderThickness="5"
+                  SelectionChanged="InventoryListView_SelectionChanged">
       <ListView.View>
         <GridView>
           <GridViewColumn Header="Name"
@@ -61,6 +78,7 @@
         </GridView>
       </ListView.View>
       </ListView>
+      </StackPanel>
       <Grid Grid.Row="1">
         <Grid.ColumnDefinitions>
           <ColumnDefinition Width="*"/>
@@ -71,15 +89,17 @@
                 Grid.Column="0"
                 Content="Create Inventory"
                 Click="CreateInventoryButton_Click"
-                />
+                Background="AntiqueWhite"/>
         <Button x:Name="modifyInventoryButton"
                 Grid.Column="1"
                 Content="Modify Inventory"
-                Click="ModifyInventoryButton_Click"/>
+                Click="ModifyInventoryButton_Click"
+                Background="AntiqueWhite"/>
         <Button x:Name="removeInventoryButton"
                 Grid.Column="2"
                 Content="Remove Inventory"
-                Click="RemoveInventoryButton_Click"/>
+                Click="RemoveInventoryButton_Click"
+                Background="AntiqueWhite"/>
 
       </Grid>
     </Grid>
