--- a/WpfApp1/Dialogs/Templates/DependencyRow.xaml
+++ b/WpfApp1/Dialogs/Templates/DependencyRow.xaml
@@ -10,9 +10,11 @@
     <TextBlock Text="Inventory"
                FontSize="25.0"
                Margin="5"/>
-    <ComboBox FontSize="25.0"
+    <ComboBox x:Name="inventoryComboBox"
+              FontSize="25.0"
               Margin="5,5,10,5"
-              Width="150"/>
+              Width="150"
+              SelectionChanged="InventoryComboBox_SelectionChanged"/>
     <TextBlock FontSize="25.0"
                Text="Consumption Quantity"
                Margin="10,5,5,5"/>
