commit before heading home

--- a/WpfApp1/Dialogs/Templates/DependencyRow.xaml
+++ b/WpfApp1/Dialogs/Templates/DependencyRow.xaml
@@ -6,6 +6,8 @@
              xmlns:local="clr-namespace:WpfApp1.Dialogs.Templates"
              mc:Ignorable="d" 
              d:DesignHeight="300" d:DesignWidth="300">
+  <Border BorderBrush="AntiqueWhite"
+          BorderThickness="5">
     <WrapPanel x:Name="denpendencyWrapPanel">
     <TextBlock Text="Inventory"
                FontSize="25.0"
@@ -19,7 +21,13 @@
                Margin="10,5,5,5"/>
     <TextBox x:Name="quantityTextBox"
              FontSize="25.0"
-             Margin="5"
+             Margin="5,5,10,5"
              Width="150"/>
+    <Button x:Name="removeDependencyRowButton"
+              FontSize="25"
+            Content="-"
+            Width="40"
+            Margin="10,5,5,5" />
   </WrapPanel>
+  </Border>
 </UserControl>
