--- a/WpfApp1/Dialogs/EditItemInventoryDialog.xaml
+++ b/WpfApp1/Dialogs/EditItemInventoryDialog.xaml
@@ -6,41 +6,42 @@
         xmlns:local="clr-namespace:WpfApp1.Dialogs"
         mc:Ignorable="d"
         Title="AddInventoryConsumption"
-        Width="800"
+        Width="900"
         MinHeight="300"
-        MinWidth="800">
+        MinWidth="900">
   <Grid>
     <Grid.RowDefinitions>
-      <RowDefinition Height="5*"/>
+      <RowDefinition Height="5*" />
       <RowDefinition Height="*" />
     </Grid.RowDefinitions>
     <Border Grid.Row="0"
             BorderThickness="5"
-            BorderBrush="CadetBlue">
+            BorderBrush="Aquamarine">
       <Grid>
         <Grid.RowDefinitions>
           <RowDefinition Height="*" />
           <RowDefinition Height="3*" />
           <RowDefinition Height="*" />
         </Grid.RowDefinitions>
-        <TextBlock x:Name="itemNameTextBlock"
-                   FontSize="25"/>
-        <StackPanel x:Name="dependenciesStackpanel"
-                    Grid.Row="1" />
-        <Grid Grid.Row="2">
-          <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="*"/>
-            <ColumnDefinition Width="*"/>
-          </Grid.ColumnDefinitions>
-          <Button x:Name="addDependencyButton"
-                  Grid.Column="0" 
-                  Content="+"
-                  FontSize="30"
-                  Click="AddDependencyButton_Click"/>
-          <Button Grid.Column="1"
-                  Content="-"
-                  FontSize="30"/>
-        </Grid>
+        <Border Background="Aquamarine"
+                Grid.Row="0">
+          <TextBlock x:Name="itemNameTextBlock"
+                     FontSize="25"
+                     VerticalAlignment="Center"
+                     TextAlignment="Center" />
+        </Border>
+        <ScrollViewer Grid.Row="1">
+          <StackPanel x:Name="dependenciesStackpanel" />
+        </ScrollViewer>
+        
+
+        <Button x:Name="addDependencyButton"
+                Grid.Row="2"
+                Content="+ Inventory Consumption"
+                FontSize="25"
+                Click="AddDependencyButton_Click" />
+
+
       </Grid>
     </Border>
     <Grid Grid.Row="1">
@@ -48,8 +49,13 @@
         <ColumnDefinition Width="*" />
         <ColumnDefinition Width="*" />
       </Grid.ColumnDefinitions>
-      <Button Grid.Column="0"/>
-      <Button Grid.Column="1"/>
+      <Button Grid.Column="0"
+              Content="Confrim"
+              FontSize="25"/>
+      <Button Grid.Column="1"
+              Content="Canel"
+              IsCancel="True"
+              FontSize="25"/>
     </Grid>
   </Grid>
 </Window>
