now serialize poition of circle fix the bug of delettable button

--- a/WpfApp1/MainWindow.xaml
+++ b/WpfApp1/MainWindow.xaml
@@ -19,7 +19,7 @@
       <TabItem FontSize="20"
                Header="Main">
         <ScrollViewer HorizontalScrollBarVisibility="Auto">
-          <page:TablesPage />
+          <page:TablesPage x:Name="tablesPage" />
         </ScrollViewer>
       </TabItem>
 
