--- a/WpfApp1/App.xaml
+++ b/WpfApp1/App.xaml
@@ -1,10 +1,11 @@
-﻿<Application x:Class="WpfApp1.App"
+﻿<Application x:Class="RestaurantPOS.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:WpfApp1"
-             xmlns:converter="clr-namespace:WpfApp1.Converters"
+             xmlns:local="clr-namespace:RestaurantPOS"
+             xmlns:converter="clr-namespace:RestaurantPOS.Converter"
+             xmlns:converter1="clr-namespace:RestaurantPOS.Converter"
              StartupUri="MainWindow.xaml">
-    <Application.Resources>
-      <converter:MultiplierConverter x:Key="Multiplier" />
+   <Application.Resources>
+    <converter1:MultiplierConverter x:Key="Multiplier" />
   </Application.Resources>
 </Application>
