--- a/WpfApp1/Dialogs/AddItemWindow.xaml
+++ b/WpfApp1/Dialogs/AddItemWindow.xaml
@@ -1,9 +1,9 @@
-﻿<Window x:Class="WpfApp1.Dialogs.AddItemWindow"
+﻿<Window x:Class="RestaurantPOS.Dialogs.AddItemWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:WpfApp1.Dialogs"
+        xmlns:local="clr-namespace:RestaurantPOS.Dialogs"
         mc:Ignorable="d"
         Title="AddItemWindow"
         WindowStartupLocation="CenterScreen"
