--- a/WpfApp1/Dialogs/Templates/DependencyRow.xaml
+++ b/WpfApp1/Dialogs/Templates/DependencyRow.xaml
@@ -1,9 +1,9 @@
-﻿<UserControl x:Class="WpfApp1.Dialogs.Templates.DependencyRow"
+﻿<UserControl x:Class="RestaurantPOS.Dialogs.Templates.DependencyRow"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-             xmlns:local="clr-namespace:WpfApp1.Dialogs.Templates"
+             xmlns:local="clr-namespace:RestaurantPOS.Dialogs.Templates"
              mc:Ignorable="d"
              d:DesignHeight="300"
              d:DesignWidth="300">
