--- a/WpfApp1/MainWindow.xaml
+++ b/WpfApp1/MainWindow.xaml
@@ -1,11 +1,11 @@
 ﻿<Window x:Name="mainWindow"
-        x:Class="WpfApp1.MainWindow"
+        x:Class="RestaurantPOS.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:WpfApp1"
-        xmlns:page="clr-namespace:WpfApp1.Pages"
+        xmlns:local="clr-namespace:RestaurantPOS"
+        xmlns:page="clr-namespace:RestaurantPOS.Pages"
         mc:Ignorable="d"
         Title="MainWindow"
         WindowState="Maximized"
