--- a/WpfApp1/Models/Circle.xaml
+++ b/WpfApp1/Models/Circle.xaml
@@ -1,9 +1,9 @@
-﻿<UserControl x:Class="WpfApp1.Models.Circle"
+﻿<UserControl x:Class="RestaurantPOS.Models.Circle"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:WpfApp1.Models"
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+             xmlns:local="clr-namespace:RestaurantPOS.Models"
              mc:Ignorable="d" 
              d:DesignHeight="300" d:DesignWidth="300">
   <Grid>
