--- a/WpfApp1/Pages/EditPage.xaml
+++ b/WpfApp1/Pages/EditPage.xaml
@@ -1,11 +1,11 @@
 ﻿<UserControl x:Name="editPage"
-             x:Class="WpfApp1.Pages.EditPage"
+             x:Class="RestaurantPOS.Pages.EditPage"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-             xmlns:local="clr-namespace:WpfApp1.Pages"
-             xmlns:converter="clr-namespace:WpfApp1.Converters"
+             xmlns:local="clr-namespace:RestaurantPOS.Pages"
+             xmlns:converter="clr-namespace:RestaurantPOS.Converters"
              mc:Ignorable="d"
              d:DesignHeight="300"
              d:DesignWidth="300"
