--- a/WpfApp1/Pages/InventoryPage.xaml
+++ b/WpfApp1/Pages/InventoryPage.xaml
@@ -1,13 +1,15 @@
-﻿<UserControl x:Class="WpfApp1.Pages.InventoryPage"
+﻿<UserControl x:Class="RestaurantPOS.Pages.InventoryPage"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-             xmlns:local="clr-namespace:WpfApp1.Pages"
+             xmlns:local="clr-namespace:RestaurantPOS.Pages"
+             xmlns:converter="clr-namespace:RestaurantPOS.Converters"
              mc:Ignorable="d"
              Loaded="InventoryPage_Loaded"
              d:DesignHeight="300"
              d:DesignWidth="300">
+ 
   <Grid>
     <Grid.ColumnDefinitions>
       <ColumnDefinition Width="*" />
@@ -75,8 +77,8 @@
                           Width="{Binding ElementName=inventoryListView, Path=ActualWidth, Converter={StaticResource Multiplier}, ConverterParameter=0.45}"
                           DisplayMemberBinding="{Binding Name}" />
           <GridViewColumn Header="Quantity"
-                            Width="{Binding ElementName=inventoryListView, Path=ActualWidth, Converter={StaticResource Multiplier}, ConverterParameter=0.45}"
-                            DisplayMemberBinding="{Binding Quantity}" />
+                          Width="{Binding ElementName=inventoryListView, Path=ActualWidth, Converter={StaticResource Multiplier}, ConverterParameter=0.45}"
+                          DisplayMemberBinding="{Binding Quantity}" />
         </GridView>
       </ListView.View>
       </ListView>
