Now circle size is according to screen size

--- a/WpfApp1/Models/Circle.xaml
+++ b/WpfApp1/Models/Circle.xaml
@@ -14,9 +14,9 @@
             Fill="Blue" />
         <TextBlock x:Name="numberTextBlock"
                    TextAlignment="Center"
-                   VerticalAlignment='Stretch'
+                   VerticalAlignment='Center'
                    FontSize="25"
-                   Text="90"
+                   Text=""
                    
                    />
 
