--- a/WpfApp1/Models/Circle.xaml
+++ b/WpfApp1/Models/Circle.xaml
@@ -1,24 +1,24 @@
 ﻿<UserControl x:Class="RestaurantPOS.Models.Circle"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
+             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:local="clr-namespace:RestaurantPOS.Models"
-             mc:Ignorable="d" 
-             d:DesignHeight="300" d:DesignWidth="300">
+             mc:Ignorable="d"
+             d:DesignHeight="300"
+             d:DesignWidth="300">
   <Grid>
-        <Ellipse 
-            x:Name="circleUI" 
-            Height="50" 
-            Width="50"
-            Fill="Blue" />
-        <TextBlock x:Name="numberTextBlock"
-                   TextAlignment="Center"
-                   VerticalAlignment='Center'
-                   FontSize="25"
-                   Text=""
-                   
-                   />
+    <Ellipse x:Name="circleUI"
+             Height="50"
+             Width="50"
+             Fill="Blue" 
+              />
+
+    <TextBlock x:Name="numberTextBlock"
+               TextAlignment="Center"
+               VerticalAlignment='Center'
+               FontSize="25"
+               Text="" />
 
 
   </Grid>
