--- a/WpfApp1/Pages/SelectionPage.xaml
+++ b/WpfApp1/Pages/SelectionPage.xaml
@@ -7,18 +7,67 @@
              xmlns:local="clr-namespace:RestaurantPOS.Pages"
              mc:Ignorable="d" 
              d:DesignHeight="300"
-             d:DesignWidth="300"
-             Loaded="uc_Loaded"
-             Unloaded="uc_Unloaded"
-             Initialized="uc_Initialized">
-  <Grid x:Name="sp">
+             d:DesignWidth="300">
+  <Grid>
+    <Grid.RowDefinitions>
+      <RowDefinition Height="*"/>
+      <RowDefinition Height="10*"/>
+    </Grid.RowDefinitions>
+    <Grid Grid.Row="0"
+          Background="Yellow">
+      <TextBlock x:Name="TableNumberTextBlock"
+                 Background="Yellow"
+                 TextAlignment="Center"
+                 VerticalAlignment="Center"
+                 FontSize="30"
+                 Text="No Table has selected"/>
+    </Grid>
+    
+    <Grid x:Name="sp"
+        Grid.Row="1">
     <Grid.ColumnDefinitions>
-      <ColumnDefinition />
-      <ColumnDefinition />
+      <ColumnDefinition Width="*"/>
+      <ColumnDefinition Width="*"/>
     </Grid.ColumnDefinitions>
-    <ListBox x:Name="lb1" />
-    <ListBox x:Name="lb2"
-             Grid.Column="1"/>
+    <Grid Grid.Column="0">
+      <Grid.RowDefinitions>
+        <RowDefinition Height="8*"/>
+        <RowDefinition Height="*" />
+      </Grid.RowDefinitions>
+      <Grid Grid.Row="1">
+        <Grid.ColumnDefinitions>
+          <ColumnDefinition />
+          <ColumnDefinition />
+          <ColumnDefinition />
+        </Grid.ColumnDefinitions>
+        <Button Grid.Column="0"/>
+        <Button Grid.Column="1"/>
+        <Button Grid.Column="2"/>
+      </Grid>
+     
+    </Grid>
+    <Grid Grid.Column="1">
+      <Grid.RowDefinitions>
+        <RowDefinition Height="8*"/>
+        <RowDefinition Height="*"/>
+      </Grid.RowDefinitions>
+      <WrapPanel x:Name="selectionWrapPanel"
+                 Grid.Row="0"/>
+      <Grid Grid.Row="1">
+        <Grid.ColumnDefinitions>
+          <ColumnDefinition />
+          <ColumnDefinition />
+          <ColumnDefinition />
+          <ColumnDefinition />
+         </Grid.ColumnDefinitions>
+        <Button Grid.Column="0" />
+        <Button Grid.Column="1" />
+        <Button Grid.Column="2" />
+        <Button Grid.Column="3" />
+
+        </Grid>
+    </Grid>
+  </Grid>
   </Grid>
 </UserControl>
   
