--- a/WpfApp1/Pages/EditPage.xaml
+++ b/WpfApp1/Pages/EditPage.xaml
@@ -36,6 +36,7 @@
         <ListView x:Name="itemsListView"
                   BorderBrush="Aquamarine"
                   BorderThickness="5"
+                  GotFocus="ItemsListView_GotFocus"
                   SelectionChanged="ItemsListView_SelectionChanged">
         <ListView.View>
           <GridView>
@@ -119,7 +120,8 @@
       <Button x:Name="modifyItemButton"
               Background="Aquamarine"
               Grid.Column="1"
-              Content="Modify Item" />
+              Content="Modify Item"
+              Click="ModifyItemButton_Click"/>
 
       <Button x:Name="deleteItemButton"
               Background="Aquamarine"
