--- a/WpfApp1/Pages/InventoryPage.xaml
+++ b/WpfApp1/Pages/InventoryPage.xaml
@@ -96,7 +96,8 @@
                 Grid.Column="0"
                 Content="Create Inventory"
                 Click="CreateInventoryButton_Click"
-                Background="AntiqueWhite"/>
+                Background="AntiqueWhite"
+                />
         <Button x:Name="modifyInventoryButton"
                 Grid.Column="1"
                 Content="Modify Inventory"
