--- a/WpfApp1/Dialogs/EditCategoryDialog.xaml
+++ b/WpfApp1/Dialogs/EditCategoryDialog.xaml
@@ -11,7 +11,8 @@
         Height="300"
         Width="400"
         MinHeight="300" 
-        MinWidth="400">
+        MinWidth="400"
+        KeyDown="Window_KeyDown">
   <StackPanel>
     <TextBlock Margin="10"
            FontSize="25"
