--- a/WpfApp1/Dialogs/EditInventoryDialog.xaml
+++ b/WpfApp1/Dialogs/EditInventoryDialog.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="RestaurantPOS.Dialogs.AddInventoryDialog"
+﻿<Window x:Class="RestaurantPOS.Dialogs.EditInventoryDialog"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
